updated owner JPA entity mapping. closes #36

--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -20,7 +20,7 @@
         <tr th:each="vet : ${vets}">
             <td th:text="${vet?.id}">1</td>
             <td th:text="${vet?.firstName}">Joe</td>
-            <td th:text="${vet?.lasName}">Buck</td>
+            <td th:text="${vet?.lastName}">Buck</td>
         </tr>
         </tbody>
     </table>
